[metadata]
name = HL7000
version = 1.0
author = Cody Scott
author_email = jcodyscott+HL7000@gmail.com
description = Light processor for the Seba HL7000 Acoustic Logger
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/namur007/HL7000
project_urls =
    Bug Tracker = https://github.com/namur007/HL7000/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

install_requires =
    pandas